feat: docker and github action
